--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo-google-fonts/rajdhani": "^0.1.0",
     "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "babel-plugin-inline-dotenv": "^1.6.0",
+    "date-fns": "^2.22.1",
     "dotenv": "^10.0.0",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
